# mcp-asinfu

./: .gitignore  README.md  app.py  claude_desktop_config.example.json  pyproject.toml  server.py
.claude/: settings.json
data/: portales_gub_uy.csv
prompts/: ejemplo.py
resources/: ejemplo.py
tools/: ejemplo.py  portales.py
